<resources>
    <string name="app_name">EndLine_v.1</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <!-- Add Custom Menu-->
    <string name="menu_profile">Profile</string>
    <string name="menu_all">All</string>
    <string name="menu_barcode_scan">Barcode Scan</string>
    <string name="menu_enter_number">Enter Number</string>
    <string name="menu_directly_add">Directly Add</string>
    <string name="menu_beauty">Beauty</string>
    <string name="menu_medical">Medical</string>
    <string name="menu_food">Food</string>
    <string name="menu_health">Health</string>
</resources>